--- a/scripts/hw_7.Rmd
+++ b/scripts/hw_7.Rmd
@@ -34,6 +34,14 @@ view(star)
 
 These are 2 citations with (Author, year) [@young2021does; @issa2011absenteeism] followed by one more citation, [@pani2016absenteeism] and a final citation with Author (year) here @garcia2018student.
 
+# Commit 3
+```{r table-described}
+scores <- star %>% group_by(sex,frl) %>% summarise(math_mean = mean(tmathss),math_sd = sd(tmathss), rdg_mean = mean(treadss), rdg_sd = sd(treadss))
+scores
+
+# scores demonstrates the mean scores and standard deviations of math and reading tests administered to children. It is separated by gender and whether or not the child is on the free or reduced lunch program(FRL)  
+```
+
 
 # Commit 4
 
