--- a/scripts/lab7refs.bib
+++ b/scripts/lab7refs.bib
@@ -39,3 +39,42 @@
   year={2018},
   publisher={ERIC}
 }
+
+
+@article{liebowitz2019,
+  title={The effect of principal behaviors on student, teacher, and school outcomes: A systematic review and meta-analysis of the empirical literature},
+  author={Liebowitz, David D and Porter, Lorna},
+  journal={Review of Educational Research},
+  volume={89},
+  number={5},
+  pages={785--827},
+  year={2019},
+  publisher={Sage Publications Sage CA: Los Angeles, CA}
+}
+
+
+@techreport{hill2022,
+  title={New Schools and New Classmates: The Disruption and Peer Group Effects of School Reassignment},
+  author={Hill, Darryl V and Hughes, Rodney P and Lenard, Matthew A and Liebowitz, David D and Page, Lindsay C},
+  year={2022},
+  institution={National Bureau of Economic Research}
+}
+
+
+@article{keenan2011myth,
+  title={The myth of prosecutorial accountability after Connick v. Thompson: Why existing professional responsibility measures cannot protect against prosecutorial misconduct},
+  author={Keenan, David and Cooper, Deborah Jane and Lebowitz, David and Lerer, Tamar},
+  journal={Yale LJF},
+  volume={121},
+  pages={203},
+  year={2011},
+  publisher={HeinOnline}
+}
+
+@book{shapiro2011models,
+  title={Models for implementing response to intervention: Tools, outcomes, and implications},
+  author={Shapiro, Edward S and Zigmond, Naomi and Wallace, Teri and Marston, Doug},
+  year={2011},
+  publisher={Guilford Press}
+}
+
