--- a/scripts/lab7refs.bib
+++ b/scripts/lab7refs.bib
@@ -78,3 +78,18 @@
   publisher={Guilford Press}
 }
 
+@book{van2016process,
+  title={Process mining: data science in action},
+  author={Van Der Aalst, Wil},
+  volume={2},
+  year={2016},
+  publisher={Springer}
+}
+
+@book{cristelli2013complexity,
+  title={Complexity in financial markets: modeling psychological behavior in agent-based models and order book models},
+  author={Cristelli, Matthieu},
+  year={2013},
+  publisher={Springer Science \& Business Media}
+}
+
